# filim

./: .gitignore  LICENSE  README.md  dev.sh  run.sh
.github/workflows/: deploy.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  audio_preferences.py  catalog.py  preferences.py  profiles.py  recommendations.py  sessions.py  streams.py
backend/app/catalog/: __init__.py  service.py
backend/app/core/: cache.py  config.py  constants.py  flaresolverr.py  logger.py  utils.py  warmup.py
backend/app/db/: base.py  cache_store.py  init.py  init_db.py  redis.py  session.py
backend/app/models/: __init__.py  base.py  catalog.py  devices.py  preferences.py  profile_audio_preferences.py  profiles.py  settings.py  streams.py
backend/app/preferences/: __init__.py  audio.py  service.py
backend/app/profiles/: service.py
backend/app/recommendations/: service.py
backend/app/sessions/: __init__.py  service.py
backend/app/sources/: __init__.py  allanime_adapter.py  allanime_catalog.py  queries.py
backend/app/streams/: __init__.py  resolver.py  service.py
backend/filim_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_end_to_end.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnimeCard.tsx  AnimeDetailView.tsx  AppLockGate.tsx  ClientProviders.tsx  ContinueCard.tsx  EpisodesPanel.tsx  FilimLoadingSurface.tsx  (+9 more)
(+20 files in other folders)
