[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filim-backend"
version = "0.1.0"
description = "LAN-only streaming backend reimplementing ani-cli behavior using FastAPI."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Filim", email = "dev@example.local" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx[http2]>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "SQLAlchemy>=2.0.30",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.0",
  "python-dotenv>=1.0.1",
  "m3u8>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

